Cherry-pick 1b0c248d6d1d. rdar://169807448

Fix animation repaint artifacts for SVG images with object-fit
    https://bugs.webkit.org/show_bug.cgi?id=284625
    rdar://141815698

    Reviewed by Simon Fraser.

    This is a follow-up to 305490@main which fixed dimensionless SVGs
    in object-fit context.

    For SVG images with intrinsic dimensions displayed with object-fit caused
    animation artifacts because the repaint wasn't covering the actual
    painted content area.

    Fixed by using replacedContentRect for the repaint rect.

    Test: fast/repaint/svg-image-object-fit-animation-repaint.html

    * LayoutTests/fast/repaint/svg-image-object-fit-animation-repaint-expected.html: Added.
    * LayoutTests/fast/repaint/svg-image-object-fit-animation-repaint.html: Added.
    * Source/WebCore/rendering/RenderImage.cpp:
    (WebCore::RenderImage::repaintOrMarkForLayout):

    Canonical link: https://commits.webkit.org/305542@main

Identifier: 305413.266@safari-7624-branch